--- a/style.css
+++ b/style.css
@@ -35,3 +35,9 @@ h3{
     box-shadow: 2px 2px 2px #999;
     background-color: #ff0042;
 }
+.rectangle{
+    margin: auto;
+    border-style: solid;
+    height: 50px;
+    width:100px;
+}
